package updating;

/**
 * Created by Catalin on 6/18/2015 .
 */
public interface Rule {
    int applyRule(int maxWeight);
}
